--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,6 @@
 </textarea>
   <br><br>
 <input type="submit" value="Reverse!">
-<p>Click to reverce text!</p>
+<p>Click to reverce text</p>
 </body>
 </html>
